# SKOLA

./: README.md  readme.md  testdata.db  uppgift1style.css  users.db
Eget/: skräp.py  test.py
Eget/NOKFLEX/: hemsida.py  main.py
PRRPRR02/: Uppgift 0.2  Uppgift 0.2.cpp  Uppgift 0.3  Uppgift 0.3.cpp  arrays  arrays.cpp  check  check.cpp  quicktest  quicktest.cpp  sfml-app
PRRPRR02/1.6 Klassdiagram/: 00Company.h  00Customer.h  00Employee.h  00Person.h  main.cpp
PRRPRR02/14pointersvectors/: main.cpp  uppgift.cpp
PRRPRR02/15Polymorfism/: 00Entities.cpp  00Entities.h  01Shapes.cpp  01Shapes.h
PRRPRR02/2.3 Felsökning/: 00Examples.cpp  01Exercise1.cpp  02Exercise2.cpp  03Exercise3  03Exercise3.cpp  Exception.h
PRRPRR02/3.2 Datastruktur/: 04List  04List.cpp  05Set  05Set.cpp
PRRPRR02/3.3 QT/: CMakeLists.txt  Calculator.cpp  Calculator.h  TextEditor.cpp  TextEditor.h  main.cpp
PRRPRR02/3.5BankServerClient/: Bank.h  BankAccount.h  Result.h  SavingsAccount.h  client  client.cpp  server  server.cpp
PRRPRR02/Arv 1.3/: 00Items.h  01Animals.h  02Armor.h  03Devices.h  03DevicesTests  04Vehicles.h  05Enemies.h  06Workers.h  06WorkersTests  06WorkersTests.cpp
PRRPRR02/Datastrukturer/: 01Array  01Array.cpp  02Vector  02Vector.cpp  03Map  03Map.cpp  03MapFastMedVector  03MapFastMedVector.cpp
PRRPRR02/Felsökning/: 00Example.cpp  01Example.cpp  01ShapeCalculator.cpp  01Shapes.h  02Friends.cpp  02Friends.h
PRRPRR02/Felsökning 2.2/: 01ShapeCalculator.cpp  01Shapes.h  02Friends.cpp  02Friends.h
PRRPRR02/Filhantering i c++/: Exception.h  main  main.cpp  namelist.txt  nameproject.cpp
PRRPRR02/Häxkonst/: chess.com  chess.com.cpp  kladdCert  kladdCert.cpp  main  main.cpp  main2  spel  spel.cpp
PRRPRR02/Inkapsling Uppgift/: 12KlassAccount.cpp  (+5 more)
WESWEB01/: 01JinjaMallar.py  Koordinatsystem.py  Lektion1övn.py  Lektion1övn2.py  Lexikon.py  LexikonUppg.py  LitenGenomGång.py  Uppgift04.py  test.py  test2.py
WEUWEB01/: index.html  style.css
instance/: mydatabase.db  users.db
(+159 files in other folders)
